# OpenCLRenderer

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  camera_effects.hpp  cl_gl_interop_texture.cpp  cl_gl_interop_texture.hpp  clstate.h  controls.hpp  engine.cpp  engine.hpp  goo.hpp  hologram.cpp  hologram.hpp  interact_manager.cpp  light.cpp  light.hpp  main.cpp  network.cpp  obj_g_descriptor.hpp  obj_info_struct.hpp  obj_load.cpp  object.cpp  object.hpp  object_context.cpp  object_context.hpp  objects_container.cpp  objects_container.hpp  ocl.cpp  ocl.h  proj.hpp  settings_loader.cpp  smoke.cpp  smoke.hpp  texture.cpp  texture.hpp  texture_context.cpp  texture_context.hpp  texture_manager.hpp  ui_manager.cpp  (+4 more)
Game/: space_manager.cpp  space_manager.hpp
Game/Galaxy/: galaxy.cpp  galaxy.hpp
Game/Space_game/: main.cpp
